// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should match snapshot 1`] = `
<div>
  <div
    class="e-input__container"
  >
    <label
      class="e-label e-label--required"
      data-testid="e-label"
      for="hello-test"
    >
      <span
        class="e-label__text"
      >
        Hello World
      </span>
      <input
        class="e-input e-input--empty"
        id="hello-test"
        name="hello-test"
        required=""
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`<Input /> should match snapshot when it has a value 1`] = `
<div>
  <div
    class="e-input__container"
  >
    <label
      class="e-label e-label--required"
      data-testid="e-label"
      for="hello-test"
    >
      <span
        class="e-label__text"
      >
        Hello World
      </span>
      <input
        class="e-input"
        id="hello-test"
        name="hello-test"
        required=""
        type="text"
        value="hello world"
      />
    </label>
  </div>
</div>
`;
